--- a/packages/nc-gui/ee/assets/css/theme-overrides.scss
+++ b/packages/nc-gui/ee/assets/css/theme-overrides.scss
@@ -36,7 +36,8 @@ body {
 }
 
 // Dropdown Menu
-.ant-dropdown-menu.ant-dropdown-menu-root {
+.ant-dropdown-menu.ant-dropdown-menu-root,
+.ant-dropdown-menu.ant-dropdown-menu-sub {
   @apply !bg-nc-bg-default !text-nc-content-gray;
 
   .ant-dropdown-menu-item {
@@ -44,6 +45,10 @@ body {
       @apply hover:text-nc-content-gray-extreme text-nc-content-gray-subtle;
     }
   }
+}
+
+.ant-dropdown-menu-submenu.ant-dropdown-menu-submenu-popup {
+  @apply border-nc-border-gray-medium;
 }
 
 .ant-collapse-content {
@@ -164,7 +169,8 @@ body {
   }
 
   // Dropdown Menu
-  .ant-dropdown-menu.ant-dropdown-menu-root {
+  .ant-dropdown-menu.ant-dropdown-menu-root,
+  .ant-dropdown-menu.ant-dropdown-menu-sub {
     .ant-dropdown-menu-item {
       &.ant-dropdown-menu-item-disabled {
         @apply !text-nc-content-gray-disabled hover:bg-transparent;
